add deps, add simple loading test

--- a/dist.ini
+++ b/dist.ini
@@ -14,6 +14,8 @@ POE                                 = 1.005
 Moose                               = 0.76
 MooseX::Declare                     = 0.22
 POEx::Role::SessionInstantiation    = 0.01
+POE::Component::IKC                 = 0.2102
+POE::Component::PubSub              = 0.05
 
 [MetaResources]
 repository                          = git://nickandperla.net/voltron.git
