correct a typo, and trace/debug options for proxysession::client

--- a/dist.ini
+++ b/dist.ini
@@ -10,13 +10,11 @@ abstract                            = "A dynamic application server"
 major   = 0
 
 [Prereq]
-POE                                 = 1.005
-Moose                               = 0.76
-MooseX::Declare                     = 0.22
-POEx::Role::SessionInstantiation    = 0.01
-POE::Component::IKC                 = 0.2102
-POE::Component::PubSub              = 0.05
+POEx::ProxySession                  = 0.091680
+MooseX::AttributeHelpers            = 0.17
 
 [MetaResources]
 repository                          = git://nickandperla.net/voltron.git
+
+[PodPurler]
 
